Bug 157113 - SVG: no space between tspan elements with different baseline-shift
Summary: SVG: no space between tspan elements with different baseline-shift
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-09-06 09:12 UTC by Xisco Faulí
Modified: 2023-11-07 12:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample file (384 bytes, image/svg+xml)
2023-09-06 09:12 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-09-06 09:12:36 UTC
Created attachment 189378 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Compare with firefox or chrome

-> There should be a space in the middle in line 2 and 3

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 13de5fc5396db63d4bd2f3e5fb4dc66c7ddd601f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-09-06 12:14:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bc25df351f946c799112533af1cf9b1dcb2f6079

tdf#157113: Add gap even if baseline is different

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-09-06 14:57:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/820363418f5c6833757e43daaa877d845c75f1d7

tdf#157113: Add gap even if baseline is different

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.