tdf#157113: Add gap even if baseline is different

This was a workaround for https://bz.apache.org/ooo/show_bug.cgi?id=122524
but it's no longer needed since 5079e7937ef471a44dcf119dc6ae0a334d9c6adc
"tdf#156251: Add gap between text elements when needed"

Change-Id: I83af59a515d56af6b0e3cf3e351d3df52510a17d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156613
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit ae6f9f07df8565368d43c5014b8e1ac32acb51cb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156597